# emotion_engine

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  requirements-train.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
models/: emotion_model.h5  emotion_model.pt
src/emotion_engine/: cli.py  config.py  engine.py  skeleton.py
src/emotion_engine/audio/: architecture.py  emotion_model.py  features.py  mic.py
src/emotion_engine/fusion/: combine.py  fuser.py  normalize.py
src/emotion_engine/runners/: continuous_fusion_emotion.py  continuous_mic_emotion.py
src/emotion_engine/text/: asr.py  sentiment.py
src/emotion_engine/utils/: formatting.py  pretty.py
tests/: conftest.py  test_config.py  test_engine.py  test_imports.py  test_skeleton.py
tests/audio/: test_emotion_model.py  test_feature.py  test_mic.py
tests/fusion/: test_fusion.py
