[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-emotion-engine"
version = "0.1.0"
description = "Multimodal emotion recognition engine (audio + text + fusion)"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
  { name = "Satyam Sinha", email = "satyamsinha9404@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "numpy",
  "torch",
  "sounddevice",
  "librosa",
  "transformers",
  "pydantic",
  "rich",
  "typer"
]


[project.scripts]
emotion-engine = "emotion_engine.cli:app"

[project.optional-dependencies]
asr = ["faster-whisper", "ctranslate2"]
nlp = ["transformers", "torch"]
full = [
  "torch",
  "faster-whisper",
  "ctranslate2",
  "transformers",
]

audio = [
  "torch",
  "sounddevice",
  "librosa"
]

dev = [
  "pytest",
  "pytest-cov",
  "black",
  "ruff",
  "mypy"
]
